fix rapid jumping on low resolutions.

--- a/frontend/src/components/GameArea/GameAreaComponent.css
+++ b/frontend/src/components/GameArea/GameAreaComponent.css
@@ -1,13 +1,13 @@
 .game-area {
   overflow-x: scroll;
   overflow-y: scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+  /* scrollbar-width: none;
+  -ms-overflow-style: none; */
   white-space: nowrap;
 }
 
 .game-area::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
 }
 /**
       // see https://www.w3schools.com/howto/howto_css_hide_scrollbars.asp
